REL-3177 Added configuration to built ITC for Linux 64